--- a/requirements.txt
+++ b/requirements.txt
@@ -1,15 +1,27 @@
 blinker==1.7.0
+certifi==2024.2.2
+chardet==5.2.0
+charset-normalizer==3.3.2
 click==8.1.7
 colorama==0.4.6
 Flask==3.0.2
 Flask-SQLAlchemy==3.1.1
+Flask-WTF==1.2.1
 greenlet==3.0.3
+idna==3.6
 importlib-metadata==7.0.1
 itsdangerous==2.1.2
 Jinja2==3.1.3
 MarkupSafe==2.1.5
+pillow==10.2.0
+pypng==0.20220715.0
 python-dotenv==1.0.1
+qrcode==7.4.2
+reportlab==4.1.0
+requests==2.31.0
 SQLAlchemy==2.0.26
 typing_extensions==4.9.0
+urllib3==2.2.1
 Werkzeug==3.0.1
+WTForms==3.1.2
 zipp==3.17.0
